--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="showcase-content">
         <h1>See what's next</h1>
         <p>Watch anywhere. Cancel anytime</p>
-        <a href="#" class="btn btn-xt">
+        <a href="#" class="btn btn-xl">
           Watch Free For 30 Days
           <i class="fas fa-chevron-right btn-con"></i>
         </a>
