add html for cancel anytime tab

--- a/index.html
+++ b/index.html
@@ -46,5 +46,24 @@
         </div>
       </div>
     </section>
+    <section class="tab-content">
+      <div class="container">
+        <!-- tab content 1 -->
+        <div id="tab-content-1" class="tab-content-item show">
+          <div class="tab-content-1-inner">
+            <div>
+              <p class="text-lg">
+                If you decide Netflix isn't for you – no problem. No commitment.
+                Cancel online at any time.
+              </p>
+              <a class="btn btn-lg" href="#">
+                Watch Free For 30 Days
+              </a>
+            </div>
+            <img src="img/tab-content-1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
