added css for tab 1

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <section class="tab-content">
       <div class="container">
         <!-- tab content 1 -->
-        <div id="tab-content-1" class="tab-content-item show">
-          <div class="tab-content-1-inner">
+        <div id="tab-1-content" class="tab-content-item show">
+          <div class="tab-1-content-inner">
             <div>
               <p class="text-lg">
                 If you decide Netflix isn't for you – no problem. No commitment.
