--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="tab-content">
       <div class="container">
         <!-- tab content 1 -->
-        <div id="tab-1-content" class="tab-content-item show">
+        <!-- <div id="tab-1-content" class="tab-content-item show">
           <div class="tab-1-content-inner">
             <div>
               <p class="text-lg">
@@ -61,6 +61,39 @@
               </a>
             </div>
             <img src="img/tab-content-1.png" alt="" />
+          </div>
+				</div> -->
+        <div id="tab-2-content" class="tab-content-item">
+          <div class="tab-2-content-top">
+            <p class="text-lg">
+              Watch TV programmes and films at any time, anywhere – personalised
+              for you.
+            </p>
+            <a class="btn btn-lg" href="#">Watch Free for 20 Days</a>
+          </div>
+          <div class="tab-2-content-bottom">
+            <div>
+              <img src="img/tab-content-2-1.png" alt="" />
+              <p>Watch on your TV</p>
+              <p class="text-dark">
+                Smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
+                players and more.
+              </p>
+            </div>
+            <div>
+              <img src="img/tab-content-2-2.png" alt="" />
+              <p>Watch instantly or download for later.</p>
+              <p class="text-dark">
+                Available on phone and tablet, wherever you go.
+              </p>
+            </div>
+            <div>
+              <img src="img/tab-content-2-3.png" alt="" />
+              <p>Use any computer</p>
+              <p class="text-dark">
+                Watch on Netflix.com
+              </p>
+            </div>
           </div>
         </div>
       </div>
