--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="tab-content">
       <div class="container">
         <!-- tab content 1 -->
-        <!-- <div id="tab-1-content" class="tab-content-item show">
+        <div id="tab-1-content" class="tab-content-item show">
           <div class="tab-1-content-inner">
             <div>
               <p class="text-lg">
@@ -62,10 +62,10 @@
             </div>
             <img src="img/tab-content-1.png" alt="" />
           </div>
-				</div> -->
+        </div>
 
         <!-- tab content 2 -->
-        <!-- <div id="tab-2-content" class="tab-content-item">
+        <div id="tab-2-content" class="tab-content-item">
           <div class="tab-2-content-top">
             <p class="text-lg">
               Watch TV programmes and films at any time, anywhere – personalised
@@ -97,7 +97,7 @@
               </p>
             </div>
           </div>
-				</div> -->
+        </div>
 
         <!-- tab content 3 -->
         <div id="tab-3-content" class="tab-content-item">
